# game-menu-injector

./: CMakeLists.txt  README.md
include/injector/: kitty_memory_bridge.h
include/overlay/: input_listener.h  menu_overlay.h  simple_renderer.h
include/process/: process_manager.h
jni/: Android.mk
scripts/: push_and_run.sh
src/: main.cpp
src/injector/: kitty_memory_bridge.cpp
src/overlay/: input_listener.cpp  menu_overlay.cpp  simple_renderer.cpp
src/process/: process_manager.cpp
